<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shadow_round"
    android:padding="16dp"
    android:id="@+id/movie_item_id">

    <ImageView
        android:id="@+id/img_movie_poster"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:contentDescription="@string/movie_poster"
        android:scaleType="fitXY" />
    <TextView
        android:id="@+id/tv_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@id/img_movie_poster"
        android:text="@string/movie_title"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_movie_title"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/img_movie_poster"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/lorem" />

</RelativeLayout>