<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity"
    android:backgroundTint="#f5f5f5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/movie_poster"
                        android:layout_width="200dp"
                        android:layout_height="300dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="4dp"
                        android:tooltipText="@string/movie_poster" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            style="@style/NameText"
                            android:layout_marginTop="32dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/judul_film_text" />

                        <TextView
                            android:id="@+id/tv_movie_title"
                            style="@style/TitleValueText"
                            android:layout_marginBottom="8dp"
                            android:text="@string/movie_title" />
                    </LinearLayout>


                </LinearLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                        <TextView
                            android:id="@+id/tv_movie_description"
                            style="@style/RegulerText1"
                            android:layout_height="match_parent"
                            android:text="@string/movie_description" />
                </ScrollView>


            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>